[package]
name = "docsite"
version = "0.1.0"
edition = "2021"
description = "Automated documentation site generator in Rust"
authors = ["Documentation Agent <docs@agentic.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/agentic/docsite"

[dependencies]
# Core functionality
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Template engine
tera = "1.19"

# File system and I/O
walkdir = "2.4"
fs_extra = "1.3"
tempfile = "3.8"

# HTTP client for deployments
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Markdown processing
pulldown-cmark = "0.9"
comrak = "0.18"

# Image processing
image = "0.24"

# Compression
flate2 = "1.0"
tar = "0.4"

# Git integration
git2 = "0.18"

# Parallel processing
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WASM support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "NodeList",
  "HtmlCollection",
] }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[[bin]]
name = "docsite"
path = "src/main.rs"

[lib]
name = "docsite"
path = "src/lib.rs"

[[bin]]
name = "docsite-wasm"
path = "src/bin/wasm.rs"
required-features = ["wasm"]